
WIP      Implement "Recently played MAME machines"

WIP      Implement "Most played SL ROMs"

WIP      Implement "Recently played SL ROMs"


[B]Advanced Emulator Launcher | version 0.9.5 | xx May 2018[/B]

WIP      Improve PDF manual rendering. Use the library pdfrw for image extraction.

FEATURE  MAME audit statistics.

WIP      SL audit statistics.

FEATURE  Added audit timestamps (MAME machines and Software Lists).

FEATURE  Move driver aristmk5.cpp (Aristocrat gambling machines) from Standard to Unusual.
         Also, adp.cpp, mpu4vid.cpp, cubo.cpp, sfbonus.cpp, peplus.cpp.

FIX      Software List ROM size was stored as string and not as int. This made the SL Audit to
         completely fail.

FIX      Fixed audit of MAME machine ROMs (wrong function name).


[B]Advanced Emulator Launcher | version 0.9.4 | 29 March 2018[/B]

FEATURE  File cache for SL ROMs/CHDs and SL assets.

FEATURE  Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!
         Also, this will allow supporting more image types (currently only PNG), manual
         types (currently only PDF) and trailer types (currently MP4 only).

FEATURE  Create an AEL virtual launcher in XML from any AML filter.

FEATURE  Use proper Software List name in "Machines by Software List" filter.

FEATURE  Use proper short name in "Machines by MAME short name" filter.

FEATURE  Clean Render and main machine JSON files. Currently, there are repeated fields on both
         databases like nplayers.

FEATURE  Move flags and plot from the render database to the assets database. Flags are modified
         by the scanner only and plot generated after the scanner. If flags and plot are in
         the asset DB, the ROM cache and hashed DB must be regenerated after the database building
         only and not always like now.

FEATURE  Render PDF manuals consisting of image scans (99% of game manuals are scans of images).